[tool.poetry]
name = "linkml-rhea"
version = "0.1.0"
description = ""
authors = ["cmungall <cjm@berkeleybop.org>"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
linkml = "^1.1.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
